samples/_failures_safe/1761223648_618773_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7573c16d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_7573c16d.c:167:17: error: ‘dist’ undeclared (first use in this function)
  167 |             if (dist
      |                 ^~~~
./samples/SAFE/__tmp_7573c16d.c:167:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7573c16d.c:167:21: error: expected ‘)’ at end of input
  167 |             if (dist
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_7573c16d.c:167:13: error: expected declaration or statement at end of input
  167 |             if (dist
      |             ^~
./samples/SAFE/__tmp_7573c16d.c:167:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7573c16d.c:167:13: error: expected declaration or statement at end of input
